fixed display error when notification got too wide

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -168,6 +168,7 @@ div:hover > .hover-expand {
 
 .hover-expand span {
   display: block;
+  max-width: 30vw;
 }
 
 .button-toggle {
